--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,4 +13,5 @@ install:
   - java -jar ./artifacts/app-mbank.jar &
 
 build_script:
+  - chmod +x ./gradlew # разрешаем запуск файла
   - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
